front_end/ui/legacy/tabbedPane.css
/* ... */
.tabbed-pane-content {
  position: relative;
  overflow: auto;
  flex: auto;
  display: flex;
  flex-direction: column;
}

.tabbed-pane-content.has-no-tabs {
  background-color: var(--sys-color-cdt-base-container);
}

.tabbed-pane-placeholder {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.tabbed-pane-placeholder-row {
  max-width: var(--sys-size-32);
  min-width: var(--sys-size-28);
  margin: 0 var(--sys-size-8);

  &.workspace {
    display: inline-flex;
    align-items: center;
    border: var(--sys-size-2) dashed var(--sys-color-divider);
    padding: var(--sys-size-8);
    border-radius: var(--sys-shape-corner-medium);
    margin-bottom: var(--sys-size-11);

    > .icon-container {
      flex-shrink: 0;
      width: var(--sys-size-13);
      height: var(--sys-size-13);
      background: var(--sys-color-tonal-container);
      align-content: center;
      border-radius: var(--sys-shape-corner-full);
      margin-right: var(--sys-size-8);

      > devtools-icon {
        color: var(--sys-color-on-tonal-container);
      }
    }
  }

  &.shortcuts-list {
    padding: 0 var(--sys-size-6);

    .shortcut-line {
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-column-gap: var(--sys-size-10);
      padding: var(--sys-size-4) 0;

      &:not(:last-child) {
        border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
      }

      .shortcuts {
        display: flex;
        flex-direction: row;
        gap: var(--sys-size-4);
        align-items: center;
      }

      .keybinds-key {
        display: flex;
        align-items: center;
        justify-content: center;
        height: var(--sys-size-11);
        min-width: var(--sys-size-11);
        font: var(--sys-typescale-body5-medium);
        white-space: nowrap;
        border-radius: var(--sys-shape-corner-small);
        background: var(--sys-color-tonal-container);
        padding: 0 var(--sys-size-4);
      }

      & button {
        margin-inline: 0;
      }
    }
  }

  & button {
    cursor: pointer;
    color: var(--text-link);
    background: transparent;
    border: none;
    padding: 0;
    text-decoration: underline;
    margin-inline: var(--sys-size-3);
    text-align: left;

    &:focus-visible {
      outline: 2px solid var(--sys-color-state-focus-ring);
      outline-offset: 2px;
      border-radius: 2px;
    }
  }
}

.tabbed-pane-header {
  display: flex;
  flex: 0 0 27px;
  border-bottom: 1px solid var(--sys-color-divider);
  overflow: visible;
  width: 100%;
  background-color: var(--app-color-toolbar-background);

  & > * {
    cursor: initial;
  }
}

.tabbed-pane-header-contents {
  flex: auto;
  pointer-events: none;
  margin-left: 0;
  position: relative;
  cursor: default;
}

.tabbed-pane-header-contents > * {
  pointer-events: initial;
}

.tabbed-pane-header-tab-icon {
  min-width: 14px;
  display: flex;
  align-items: center;
  margin-right: var(--sys-size-2);
}

.tabbed-pane-header-tab-suffix-element {
  height: var(--sys-size-8);
  width: var(--sys-size-8);
  padding-left: var(--sys-size-2);

  &:has(.badge) {
    width: 17px;
    margin-left: var(--sys-size-2);
  }
}

.badge {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  height: 15px;
  width: 15px;
  line-height: 15px;
  border-radius: var(--sys-shape-corner-full);
  margin-left: var(--sys-size-2);
  background-color: var(--sys-color-error);
  color: var(--sys-color-on-error);
  font-size: var(--sys-typescale-body5-size);
  font-weight: var(--ref-typeface-weight-bold);
}


.tabbed-pane-header-tab {
  font: var(--sys-typescale-body4-medium);
  color: var(--sys-color-on-surface-subtle);
  height: var(--sys-size-12);
  float: left;
  padding: 0 10px;
  white-space: nowrap;
  cursor: default;
  display: flex;
  align-items: center;
}

.tabbed-pane-header-tab.closeable {
  padding-right: var(--sys-size-3);
}

.tabbed-pane-header-tab devtools-icon.dot::before {
  outline-color: var(--icon-gap-toolbar);
}

.tabbed-pane-header-tab:hover devtools-icon.dot::before {
  outline-color: var(--icon-gap-toolbar-hover);
}

.tabbed-pane-header-tab:not(.vertical-tab-layout):hover,
.tabbed-pane-shadow .tabbed-pane-header-tab:focus-visible {
  color: var(--sys-color-on-surface);
  background-color: var(--sys-color-state-hover-on-subtle);
}

.tabbed-pane-header-tab-title {
  text-overflow: ellipsis;
  overflow: hidden;
}

.tabbed-pane-header-tab.measuring {
  visibility: hidden;
}

.tabbed-pane-header-tab.selected {
  border-bottom: none;
  color: var(--sys-color-primary);
}

.tabbed-pane-header-tab.dragging {
  --override-dragging-box-shadow-color: rgb(0 0 0 / 37%);

  position: relative;
  box-shadow: 0 1px 4px 0 var(--override-dragging-box-shadow-color);
  background-color: var(--sys-color-state-hover-on-subtle);
}

.theme-with-dark-background .tabbed-pane-header-tab.dragging,
:host-context(.theme-with-dark-background) .tabbed-pane-header-tab.dragging {
  --override-dragging-box-shadow-color: rgb(230 230 230 / 37%);
}

.tabbed-pane-header-tab .tabbed-pane-close-button {
  visibility: hidden;
}

.tabbed-pane-header-tab:hover .tabbed-pane-close-button,
.tabbed-pane-header-tab.selected .tabbed-pane-close-button {
  visibility: visible;
}

.tabbed-pane-header-tabs-drop-down-container {
  float: left;
  opacity: 80%;
  display: flex;
  align-items: center;
  height: 100%;
}

.tabbed-pane-header-tabs-drop-down-container > .chevron-icon:hover,
.tabbed-pane-header-tabs-drop-down-container > .chevron-icon:focus-visible {
  color: var(--icon-default-hover);
}

.tabbed-pane-header-tabs-drop-down-container:hover,
.tabbed-pane-header-tabs-drop-down-container:focus-visible {
  background-color: var(--sys-color-state-hover-on-subtle);
}

.tabbed-pane-header-tabs-drop-down-container.measuring {
  visibility: hidden;
}

.tabbed-pane-header-tabs-drop-down-container:active {
  opacity: 80%;
}
/* ... */

